  * merged lp:~hellium/software-center/logging, thanks to 
    Geliy Sokolov
  * merged lp:~mmcg069/software-center/bigger-icons, the icon size
    is actually the same, name is a bit misleading. It contains a new
    actionbar, but that is not yet enabled as its not feature complete
    yet
  * merged lp:~didrocks/software-center/fix-running-standalone-pane,
    many thanks

  [ Gary Lasker ]
  * merge lp:~mmcg069/software-center/appdetailsview-gtk-mpt, many nice
    UI tweaks and improvements from Matthew McGowan, thanks! 
  * softwarecenter/view/widgets/navigationbar.py,
    softwarecenter/view/softwarepane.py:
    - remove the old navigation bar as we won't be going back to it
  * softwarecenter/view/availablepane.py:
    - don't call set_category if viewing details or searching to
      reduce unnecessary applist refreshes
  * softwarecenter/view/appview.py;
    - fix app row reselect in the applist view for sorted lists and also
      for channels when the model is regenerated rather than replaced
      (LP: #609945)
  * test/test_appview.py:
      add tests for correct sorting for app insert case and for
      index map updating 
  * merge lp:~didrocks/software-center/add-remove-multiple to add a
    remove_multiple method to aptd.py, thanks to Didier Roche! 

 -- Gary Lasker <gary.lasker@canonical.com>  Mon, 26 Jul 2010 01:45:09 -0400

software-center (2.1.5) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - fix in channel adding code
  * merged lp:~mvo/software-center/lazr to support gobject
    based wrapper around lazr.restfulclient apps
  * merged lp:~mmcg069/software-center/pathbar-tweaks,
    many thanks
  * merged  lp:~mvo/software-center/appdetails-in-db that
    improve the AppDetails abstraction 
  * merged lp:~mvo/software-center/plugin-support (important
    for the oneconf integration)
  * merged lp:~osomon/software-center/close_in_progress
    that fixes LP:#431907, thanks to Olivier Tilloy 